# monitoring-prometheus-fastapi

./: Dockerfile  docker-compose.yaml  main.py  prometheus.yml  pyproject.toml
