[tool.poetry]
name = "monitoring-prometheus-fastapi"
version = "0.1.0"
description = ""
authors = ["fmelihh <furkanmelihercan.98@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
jinja2 = "^3.1.4"
uvicorn = "^0.30.5"
py-grpc-prometheus = "^0.8.0"


[tool.poetry.group.dev.dependencies]
poetry-lock-package = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

